--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -808,8 +808,6 @@ Table \ref{tab:additive_average_lambda} provides the average penalty parameter v
 
 Figure \ref{fig:additive} provides example model fits given by gradient descent. The smoothness of the function estimates reflect the magnitude of the regularization parameters given in Table \ref{tab:additive}. In addition, gradient descent was able to learn that $f_4$ was the zero function.
 
-Finally, to assess how sensitive gradient descent is to its initialization points, we tried multiple starting points. For this experiment, we tried a smaller problem with 50 training, 25 validation, and 50 test observations and $p = 7$ covariates. The response was generated as the sum of $f_1$ and $f_2$ as defined above plus noise. We used the same first two initializations $(10, 1, ..., 1)$ and $(0.1, 0.01, ..., 0.01)$ and the rest were randomly selected from $10^i$ for $i = -2, ..., 1$. The results are shown in Figure \ref{fig:mult_starts}. As the number of initialization points increased, both the validation error and the test error decreased.
-
 \begin{table}
 \caption {\label{tab:additive} A comparison of additive models with separate smoothness penalty parameters tuned by gradient descent, Nelder-Mead, and Spearmint vs. additive models with two penalty parameters tuned by grid search. Standard errors are given in parentheses.}
 \centering
@@ -817,14 +815,17 @@ Finally, to assess how sensitive gradient descent is to its initialization point
 \hline
 & Num $\lambda$ & Validation Error & Test Error & \# Solves\\
 \hline
-% (729 + 351 - 87 - 184)/30
-Gradient Descent & 24 & 23.91 (0.93) & 26.15 (0.78) & 27.0 \\
+% bayes: script_out/sparse_hc_new_numsolves.out
+Gradient Descent & 24 & 23.87 (0.97) & 26.10 (0.86) & 13.07 \\
 \hline
-Nelder-Mead & 24 & 27.91 (0.90) & 28.73 (0.90) & 100 \\
+% bayes: script_out/sparse_nm_new.out
+Nelder-Mead & 24 & 27.94 (0.90) & 28.73 (0.90) & 100 \\
 \hline
-Spearmint & 24 & 32.64 (2.03) & 37.72 (2.17) & 100 \\
+% bayes: script_out/sparse_sp_new.out
+Spearmint & 24 & 27.91 (1.80) & 34.02 (1.59) & 100 \\
 \hline
-Grid Search & 2 & 28.85 (0.92) & 30.03 (0.97) & 100 \\
+% bayes: script_out/sparse_gs_new.out
+Grid Search & 2 & 28.71 (0.97) & 29.42 (0.96) & 100 \\
 \hline
 \end{tabular}
 \end{table}
@@ -836,13 +837,13 @@ Grid Search & 2 & 28.85 (0.92) & 30.03 (0.97) & 100 \\
 \hline
 & $\lambda_0$ & $\lambda_1$ & $\lambda_2$ & $\lambda_3$ & $\lambda_4$\\
 \hline
-Gradient Descent & 9.96 & 0.40 & 1.01 & 0.86 & 1.04 \\
+Gradient Descent & 9.95 & 0.40 & 1.01 & 0.86 & 1.04 \\
 \hline
-Nelder-Mead & 9.69 & 0.90 & 1.01 & 1.00 & 1.00 \\
+Nelder-Mead & 9.76 & 0.90 & 1.00 & 1.00 & 1.01 \\
 \hline
-Spearmint & 3.36 & 0.76 & 0.06 & 0.01 & 0.03\\
+Spearmint & 0.026 & 0.003 & 0.02 & 0.006 & 0.018\\
 \hline
-Grid Search & 4.65 & 0.44 & -- & -- & -- \\
+Grid Search & 4.04 & 0.38 & -- & -- & -- \\
 \hline
 \end{tabular}
 \end{table}
@@ -881,56 +882,44 @@ One may notice that for the un-pooled sparse group lasso, gradient descent consi
 \begin{table}
 \caption{\label{table:unpooled} Un-pooled sparse group lasso and sparse group lasso (SGL) tuned by gradient descent and grid search, respectively. ``\% CN $\beta$'' is the percentage of nonzero coefficients correctly identified among all the true nonzero coefficients. Standard errors are given in parentheses. We abbreviated the methods as follows: Gradient Descent = GD, Nelder-Mead = NM, Spearmint = SP, Grid Search = GS}
 \centering
-\begin{tabular}{| l | l | l | l | l | l | l |}
+\begin{tabular}{| l | l | l | l | l | l | }
 \hline
-\multicolumn{7}{|c|}{n=90, p=300, M=30}\\
+\multicolumn{6}{|c|}{n=90, p=600, M=30}\\
 \hline
-& \# $\lambda$ & $\beta$ Error & \% CN $\beta$ & Validation Err & Test Err & \# Solves \\
+& \# $\lambda$ & $\beta$ Error & Validation Err & Test Err & \# Solves \\
 \hline
-% 292 + 598 iters, 746 + 1518 CVX solves, (746 + 1518 - (292 + 598))/30 total solves
-GD & 31 & 7.27 (0.30) & 87.78 (2.04) & 22.56 (1.72) & 47.55 (3.00) & 45.8 \\
+% bayes: script_out/sgl_hc_1_90_30.out
+GD & 31 & 5.93 (0.23)  & 18.88 (0.78) & 38.92 (1.47) & 40.43 (0.64) \\
 \hline
-NM & 31 & 8.44 (0.22) & 75.11 (2.01) & 57.27 (4.02) & 56.57 (1.98) & 100\\
+% bayes: script_out/sgl_nm_1.txt
+NM & 31 & 7.40993 (0.17068) & 47.78416 (2.25051) & 49.44955 (1.43038) & 100\\
 \hline
-SP & 31 & 8.91 (0.32) & 78.89 (2.46) & 28.25 (2.56) & 60.60 (2.98) & 100\\
+% running right now on bayes
+% bayes: script_out/sgl_sp_1.out
+SP & 31 & ? & 100\\
 \hline
-GD & 2 & & & & & \\
+% bayes: script_out/sgl_gs_1.txt
+GS & 2 & 7.43011 (0.18912) & 47.23 (2.26039) & 50.01 (1.402) & 100 \\
 \hline
-NM & 2 & & & & & \\
+\multicolumn{6}{|c|}{n=90, p=900, M=60}\\
 \hline
-SP & 2 &  & & & & \\
+& \# $\lambda$ & $\beta$ Error &  Validation Error & Test Error & \# Solves \\
 \hline
-GS & 2 & 8.50 (0.25) & 83.78 (2.57) & 52.32 (3.66) & 56.86 (2.10) & 100 \\
+% bayes: script_out/sgl_hc_2.out
+GD & 61 & 6.43 (0.23) & 18.78 (1.25) & 41.88 (1.51) & 38.13 (1.48)\\
 \hline
-\multicolumn{7}{|c|}{n=90, p=900, M=60}\\
+% bayes: descent_optimization/script_out/submit_sgl_GS_data2.txt
+GS & 2 & 7.67 (0.20)  & 45.70 (2.27) & 51.34 (1.86) & 100 \\
 \hline
-& \# $\lambda$ & $\beta$ Error & \% CN $\beta$ & Validation Error & Test Error & \# Solves \\
+\multicolumn{6}{|c|}{n=90, p=1200, M=100}\\
 \hline
-% 578 + 344 iters, 1479 + 848 solves
-GD & 61 & 6.35 (0.20) & 90.00 (1.60) & 18.40 (1.21) & 41.48 (1.40) & 46.83 \\
+& \# $\lambda$ & $\beta$ Error & Validation Error & Test Error & \# Solves \\
 \hline
-GD & 2 & & & & & \\
+% bayes: script_out/sgl_hc_3.out
+GD & 101 & 6.93 (0.26) & 17.91 (1.44) & 47.47 (2.00) & 37.83 (1.33) \\
 \hline
-NM & 2 & & & & & \\
-\hline
-SP & 2 &  & & & & \\
-\hline
-GS & 2 & 7.67 (0.20) & 84.67 (1.97) & 45.70 (2.27) & 51.34 (1.86) & 100 \\
-\hline
-\multicolumn{7}{|c|}{n=90, p=1200, M=100}\\
-\hline
-& \# $\lambda$ & $\beta$ Error & \% CN $\beta$ & Validation Error & Test Error & \# Solves \\
-\hline
-%  iters 599 + 371, 1524 + 889 solves
-GD & 101 & 6.82 (0.25) & 89.78 (1.80) & 18.43 (1.42) & 46.36 (1.94) & 48.1 \\
-\hline
-GD & 2 & & & & & \\
-\hline
-NM & 2 & & & & & \\
-\hline
-SP & 2 &  & & & & \\
-\hline
-GS & 2 & 8.28 (0.19) & 86.00 (1.97) & 50.00 (2.16) & 57.14 (2.18) & 100 \\
+% bayes: descent_optimization/script_out/submit_sgl_GS_data3.txt
+GS & 2 & 8.28 (0.19) & 50.00 (2.16) & 57.14 (2.18) & 100 \\
 \hline
 \end{tabular}
 \end{table}
@@ -951,27 +940,33 @@ We assessed the models by their test error, the percentage of correctly identifi
 \begin{table}
 	\caption{\label{table:matrix_completion} Matrix Completion. Standard errors are given in parentheses. \% CN $\alpha$ and \% CN $\beta$ are the percentage of correctly identified nonzero covariate groups. We abbreviated the methods as follows: Gradient Descent = GD, Nelder-Mead = NM, Spearmint = SP, Grid Search = GS}
 	\centering
-		\begin{tabular}{| l | l | l | l | l | l | l | l |}
+		\begin{tabular}{| l | l | l | l | l | l |}
 		\hline
-		\multicolumn{8}{|c|}{N=60, G=12, n=2}\\
+		\multicolumn{6}{|c|}{N=60, G=12, n=2}\\
 		\hline
-		& \# $\lambda$ & Validation Err & Test Err& \% CN $\alpha$ & \% CN $\beta$ &  $\Gamma$ Rank & Num Solves\\
+		& \# $\lambda$ & Validation Err & Test Err& $\Gamma$ Rank & Num Solves\\
 		\hline
-		GD & 25 & 0.631 (0.035) & 0.677 (0.039) & 57.63 (3.32) & 35.45 (3.56) & 5.20 (0.27) & 11 (0.97) \\
+		% bayes: script_out/matrix_completion_groups_HC_11.txt
+		GD & 25 & 0.631 (0.035) & 0.677 (0.039) & 5.20 (0.27) & 11 (0.97) \\
 		\hline
-		NM & 25 & 0.784 (0.038) & 0.755 (0.038) & 64.12 (2.97) & 42.97 (3.63) & 18.47 (0.54) & 100 \\
+		% bayes: script_out/matrix_completion_groups_NM_11.txt
+		NM & 25 & 0.784 (0.038) & 0.755 (0.038) & 18.47 (0.54) & 100 \\
 		\hline
-		SP & 25 & 0.673 (0.034) & 0.757 (0.039) & 57.18 (2.72) & 27.73 (2.67) & 14.67 (2.84) & 100\\
+		% bayes: script_out/matrix_completion_groups_SP_11.txt
+		SP & 25 & 0.673 (0.034) & 0.757 (0.039) & 14.67 (2.84) & 100\\
 		\hline
-		GS & 2 & 0.74 (0.038) & 0.733 (0.039) & 46.39 (3.08) & 22.53  (2.845) & 8.90 (0.65) & 100\\
+		% bayes: script_out/matrix_completion_groups_GS_11.txt
+		GS & 2 & 0.74 (0.038) & 0.733 (0.039) & 8.90 (0.65) & 100\\
 		\hline
-		\multicolumn{8}{|c|}{N=100, G=22, n=8}\\
+		\multicolumn{6}{|c|}{N=100, G=22, n=8}\\
 		\hline
-		& \# $\lambda$ & Validation Err & Test Err& \% CN $\alpha$ & \% CN $\beta$ &  $\Gamma$ Rank & Num Solves\\
+		& \# $\lambda$ & Validation Err & Test Err&  $\Gamma$ Rank & Num Solves\\
 		\hline
-		GD & 45 & 0.375 (0.014) & 0.377 (0.013)& 50.53 (3.19) & 26.80(1.75) & 8.38 (0.57) & 27.28 (1.34) \\
+		% bayes: script_out/matrix_completion_groups_runs_HC_9.txt
+		GD & 45 & 0.375 (0.014) & 0.377 (0.013)&  8.38 (0.57) & 27.28 (1.34) \\
 		\hline
-		GS & 2 & 0.409 (0.015) & 0.409 (0.013) & 51.20 (3.47) & 20.74  (1.58) & 13.7 (0.90) & 100\\
+		% bayes: script_out/matrix_completion_groups_runs_GS_9.txt
+		GS & 2 & 0.409 (0.015) & 0.408 (0.013) & 13.7 (0.90) & 100\\
 		\hline
 	\end{tabular}
 \end{table}
