update lasso plotting code

--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
@@ -367,7 +367,8 @@ i need to change the line style cause confusing
 		\hline
 		& \# $\lambda$ & Validation Err & Test Err& $\Gamma$ Rank & Num Solves\\
 		\hline
-		% need to implement
+		% running on aws 52.24.225.23
+		% results/matrix_completion_groups/matrix_completion_groups_HC0_11.txt
 		GD & 2 &  \\
 		\hline
 		% bayes: script_out/matrix_completion_groups_NM0_11.txt
@@ -381,6 +382,8 @@ i need to change the line style cause confusing
 		\hline
 		& \# $\lambda$ & Validation Err & Test Err&  $\Gamma$ Rank & Num Solves\\
 		\hline
+		% launching on my other aws instance 35.167.141.133
+		% results/matrix_completion_groups/matrix_completion_groups_HC0_9.txt
 		GD & 2 & ?\\
 		\hline
 		% bayes: script_out/matrix_completion_groups_NM0_9.txt
