--- a/jcgs_reviewer/reviewer_ae.tex
+++ b/jcgs_reviewer/reviewer_ae.tex
@@ -1,6 +1,7 @@
 \documentclass[]{article}
 \usepackage{amsmath}
 \usepackage{color}
+\usepackage{graphicx}
 
 \addtolength{\oddsidemargin}{-.5in}%
 \addtolength{\evensidemargin}{-.5in}%
@@ -34,8 +35,11 @@
 		\point{They state in the abstract and in the paper: "For many penalized regression problems, the validation loss is actually smooth almost-everywhere with respect to the penalty parameters."  I assume that almost everywhere means "almost everywhere with respect to Lebesgue measure."  But of course, this same statement is true of the objective itself, for which gradient descent cannot be used.  The relevant condition seems to be to be whether the loss is smooth almost everywhere with respect to the probability measure induced by the true sampling model, which is not the case for e.g. lasso/group lasso/etc.  Can the authors please clarify and elaborate on this point?}
 		\reply Algorithmically, at each iteration of gradient descent, it is unlikely for us to end up at a penalty parameter where the valiation loss is not smooth. This can be viewed as analogous to iteratively solving the lasso using subgradient descent: at each iteration, none of the features are never exactly zero. They are very close and one needs to threshold the feature values to actually get ones that are exactly zero. Hence the gradient is almost always well-defined.
 		
-		To see that this behavior is also true when tuning the regularization parameters, we considered the lasso problem and tried tuning it. As shown below, the regularization parameter at each iteration is never exactly at the knots in the lasso path.
+		To see that this behavior is also true when tuning the regularization parameters, we considered the lasso problem and tried tuning it. As shown in the figure below, the regularization parameter at each iteration is rarely exactly at the knots in the lasso path.
 		
-		--Simulation goes here--
+		\begin{figure}
+			\centering
+			\includegraphics[width=0.7\textwidth]{lasso_knot_locations.png}
+		\end{figure}
 	\end{enumerate}
 \end{document}
